# RL-Designer

./: .gitattributes  .gitignore  .gitmodules  DEMANDS.md  README.md  TODO.md  t1.json  t2.json  test.json
.github/workflows/: release.yml
Game Models decryption/UModel_RL/: decryptor_out.bat  readme.txt
Original Files/Fennec/: engine.FBX
Original Files/Octane/: Roof Headlights Remade.c4d
ac_decal_installer/: Cargo.toml
decals/: ball_index.json  boost_meter_index.json  create_index.py  index.json  wheel_index.json
decals/templates/Ball/: Ball.mtl  (+2 more)
docs/: Designer-Guide.md  Sharing-Guide.md  User-Guide.md  personal.md
models/Game Models decryption/: items.csv
old_installer/ac_decal_installer/: Cargo.toml  build.rs
old_installer/zip_installer/: Cargo.toml
release/: latest_template.json  update_latest.py  update_version.py
rl-designer/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
rl-designer/src/: App.scss  App.tsx  index.scss
rl-designer/src-tauri/: 2  Cargo.toml  tauri.conf.json
rl-designer/src-tauri/src/: config.rs  constants.rs  lib.rs
rl-designer/src-tauri/src/commands/: collection.rs  download.rs  explorer.rs  mod.rs  online_ball_patch.rs
rl-designer/src-tauri/src/types/: decal.rs  elements.rs  mod.rs
rl-designer/src-tauri/src/utils/: collection.rs  download.rs  explorer.rs  files.rs  hash.rs  images.rs  mod.rs
tools/: create_index.py  dup16_wheel.py  update_version.py  zip_decals.py
tools/utils/: hash_utils.py
zip_installer/: Cargo.toml
zip_installer/src/: main.rs
(+571 files in other folders)
