[package]
name = "rl-designer"
version = "0.9.1"
description = "A Rocket League Designer application to manage custom decals"
authors = ["ALXS"]
license = ""
repository = "https://github.com/ALXS-GitHub/RL-Designer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
base64 = "0.22.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
dotenv = "0.15.0"
zip = "4.3.0"
tokio = { version = "1.46.1", features = ["full"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
